# PetLifeGame

./: .gitignore  Bar.cpp  Bar.h  BathMinigame.cpp  BathMinigame.h  Button.cpp  Button.h  CMakeLists.txt  Currency.cpp  Currency.h  Debuff.cpp  Debuff.h  DifficultyUI.cpp  DifficultyUI.h  EatingMinigame.cpp  EatingMinigame.h  Game.cpp  Game.h  GameOver.cpp  GameOver.h  LICENSE  Map.cpp  Map.h  Player.cpp  Player.h  PlayingMinigame.cpp  PlayingMinigame.h  README.md  Shop.cpp  Shop.h  SleepingFunctionality.cpp  SleepingFunctionality.h  Timer.h  TitleScreen.cpp  TitleScreen.h  main.cpp
Assets/: Credits.txt
Assets/Buttons/: ButtonFormat.txt
Assets/Player/Textures/CatResized/: EachRow.txt
